kubernetes/oc/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oc
  namespace: oc
  labels:
    app: oc
spec:
  replicas: 3
  selector:
    matchLabels:
      app: oc
  template:
    metadata:
      labels:
        app: oc
    spec:
      containers:
        - name: oc
          image: speeedyyyy/onlinecompiler2:1.0.12
          ports:
            - containerPort: 80
          volumeMounts:
            - name: keys
              mountPath: /app/keys
          resources:
            requests:
              cpu: 100m
              memory: "200Mi"
            limits:
              cpu: 1000m
              memory: "500Mi"
      volumes:
        - name: keys
          persistentVolumeClaim:
            claimName: oc-keys
---
apiVersion: v1
kind: Service
metadata:
  name: oc
  namespace: oc
  annotations:
    traefik.ingress.kubernetes.io/service.sticky.cookie: "true"
spec:
  selector:
    app: oc
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
